Fixed product image object-fit properties to remove awkward gaps between images and text. Added back in the dollar-sign in cart-view. Cart-view: checkout button styling

--- a/src/main/resources/static/css/cart.css
+++ b/src/main/resources/static/css/cart.css
@@ -64,11 +64,13 @@
 }
 
 .cart-button {
+    width: 100%;
     border-radius: 0;
     padding: 1rem 2rem;
     background-color: rgba(255, 145, 0, 0.904);
     box-shadow: none;
     color: white;
+    font-size: 1.1rem;
     font-weight:600;
     transition: background-color 0.2s ease-in-out;
 }
