--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -47,7 +47,7 @@ img {
     width: 170px;
     height: 170px;
     max-height: 700px;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 input[type="submit"] {
